--- a/public/easton-location/index.html
+++ b/public/easton-location/index.html
@@ -141,7 +141,25 @@ See below a mapbox of where our Easton location is:">
           var marker = L.marker(loc).addTo(mymap);
     </script>
   
-
+<!-- Comments on following content here ig -->
+<h1 id="Easton camp photos">Camp Photos!</h1>
+<p><img src="/img/ESTPHOTO1.jpeg" alt="1">
+<img src="/img/ESTPHOTO2.jpeg" alt="2">	
+<img src="/img/ESTPHOTO3.jpeg" alt="3">
+<img src="/img/ESTPHOTO4.jpeg" alt="4">
+<img src="/img/ESTPHOTO5.jpeg" alt="5">
+<img src="/img/ESTPHOTO6.jpeg" alt="6">
+<img src="/img/ESTPHOTO7.jpeg" alt="7">
+<img src="/img/ESTPHOTO8.jpeg" alt="8">
+<img src="/img/ESTPHOTO9.jpeg" alt="9">
+<img src="/img/ESTPHOTO10.jpeg" alt="10">
+<img src="/img/ESTPHOTO11.jpeg" alt="11">
+<img src="/img/ESTPHOTO12.jpeg" alt="12">
+<img src="/img/ESTPHOTO13.jpeg" alt="13">
+<img src="/img/ESTPHOTO14.jpeg" alt="14">
+<img src="/img/ESTPHOTO15.jpeg" alt="15">
+<img src="/img/ESTPHOTO16.jpeg" alt="16">
+<img src="/img/ESTPHOTO17.jpeg" alt="17"><p>
 
 </div>
 						
